--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.25.0",
     "framer-motion": "^6.2.3",
+    "mongoose": "^6.1.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
