--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.49.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
@@ -54,6 +55,9 @@
     ]
   },
   "devDependencies": {
+    "@redux-devtools/core": "^3.11.0",
+    "@redux-devtools/dock-monitor": "^2.1.0",
+    "@redux-devtools/log-monitor": "^3.1.0",
     "@types/axios": "^0.14.0"
   }
 }
