--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cartoon-avatar": "^1.0.2",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^14.3.2",
