--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "concurrently \"nodemon source/server.ts\" \"cd .. && cd client && npm start\"",
-    "deploy": "git add . && git commit -m Heroku && git push heroku master",
+    "deploy": "git add . && git commit -m Heroku && git push heroku main",
     "postinstall": "tsc"
   },
   "keywords": [
