--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "concurrently \"nodemon source/server.ts\" \"cd .. && cd client && npm start\"",
     "deploy": "git add . && git commit -m Heroku && git push heroku main",
-    "postinstall": "tsc"
+    "postinstall": "tsc",
+    "start": "node dist/server.js"
   },
   "keywords": [
     "typescript",
