--- a/package.json
+++ b/package.json
@@ -30,8 +30,21 @@
     "url": "https://github.com/JonathanDPotter/inventory/issues"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/connect-mongo": "^3.1.3",
+    "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/express-flash": "^0.0.2",
+    "@types/express-session": "^1.17.4",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^17.0.12",
+    "@types/passport": "^1.0.7",
+    "@types/passport-google-oauth20": "^2.0.11",
+    "@types/passport-local": "^1.0.34",
     "bcrypt": "^5.0.1",
     "cartoon-avatar": "^1.0.2",
+    "concurrently": "^7.0.0",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^14.3.2",
@@ -45,19 +58,6 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.5",
-    "@types/bcrypt": "^5.0.0",
-    "@types/connect-mongo": "^3.1.3",
-    "@types/cors": "^2.8.12",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.13",
-    "@types/express-flash": "^0.0.2",
-    "@types/express-session": "^1.17.4",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^17.0.12",
-    "@types/passport": "^1.0.7",
-    "@types/passport-google-oauth20": "^2.0.11",
-    "@types/passport-local": "^1.0.34",
-    "concurrently": "^7.0.0"
+    "typescript": "^4.5.5"
   }
 }
